@@ -1,29 +1,26 @@
 package ${groupId};
 
+import static com.codeborne.selenide.Condition.text;
+import static com.codeborne.selenide.Selenide.$;
+import static com.codeborne.selenide.Selenide.open;
+import static com.codeborne.selenide.Selenide.webdriver;
+import static com.codeborne.selenide.WebDriverConditions.urlStartingWith;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.net.URL;
 
 import org.jboss.arquillian.container.test.api.Deployment;
-import org.jboss.arquillian.drone.api.annotation.Drone;
-import org.jboss.arquillian.graphene.Graphene;
 import org.jboss.arquillian.junit5.ArquillianExtension;
 import org.jboss.arquillian.test.api.ArquillianResource;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.By;
+import org.openqa.selenium.htmlunit.HtmlUnitDriver;
 
-/**
- * When running within Eclipse/IntelliJ, make sure to add VM args:
- *
- * --add-opens java.base/java.lang=ALL-UNNAMED
- * --add-opens=java.base/java.io=ALL-UNNAMED
- * --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
- *
- * In Eclipse, the JRE configuration had a field for default VM args, so you
- * need only to set it once and apply it for all test cases.
- */
+import com.codeborne.selenide.WebDriverRunner;
+
 @ExtendWith(ArquillianExtension.class)
 public class HelloServletTest {
 
@@ -44,25 +41,29 @@ public class HelloServletTest {
 	@ArquillianResource
 	private URL baseURL;
 
-	@Drone
-	private WebDriver driver;
+	@BeforeAll
+	public static void setup() {
+		WebDriverRunner.setWebDriver(new HtmlUnitDriver());
+	}
 
 	@Test
 	public void testArquillianBootedUp() {
 		assertNotNull(baseURL);
-		assertNotNull(driver);
 	}
 
 	@Test
 	public void testHomePage() {
-		HomePage homePage = Graphene.goTo(HomePage.class);
-		//Graphene.waitGui().until().element(By.id("banner")).is().present();
-		homePage.assertPageLoaded();
-	}
+		open(baseURL);
+		webdriver().shouldHave(urlStartingWith(baseURL.toString()));
+		// System.out.println(WebDriverRunner.source());
+		$(By.id("header")).shouldHave(text("App Name"));
+		$(By.id("body")).shouldHave(text("Say Hello"));
+		
+		$(By.id("hello-link")).shouldHave(text("Say Hello"));
+		$(By.id("hello-link")).click();
 
-	@Test
-	public void testHelloPage() {
-		HelloPage helloPage = Graphene.goTo(HelloPage.class);
-		helloPage.assertPageLoaded();
+		webdriver().shouldHave(urlStartingWith(baseURL + "hello"));
+		$(By.id("header")).shouldHave(text("App Name"));
+		$(By.id("body")).shouldHave(text("Say Hello"));
 	}
 }
